--- a/app/src/main/res/layout/add_task.xml
+++ b/app/src/main/res/layout/add_task.xml
@@ -2,13 +2,11 @@
 
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/home_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:divider="?android:attr/dividerVertical"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
         <EditText
             android:id="@+id/taskText"
