--- a/app/src/main/res/layout/seek_bar_preference.xml
+++ b/app/src/main/res/layout/seek_bar_preference.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- We can probably make this support RTL layouts on sdk>17 and still work on
+<!-- TODO We can probably make this support RTL layouts on sdk>17 and still work on
      old sdk by including both Left/Right and Start/End margins, padding, etc.
      Using hard coded LTR for the moment just to be sure it works. -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="RtlHardcoded"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?attr/listPreferredItemHeightSmall"
-    android:gravity="center_vertical"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
-    android:paddingRight="?android:attr/listPreferredItemPaddingRight"
     android:background="?android:attr/activatedBackgroundIndicator"
-    android:clipToPadding="false">
+    android:clipToPadding="false"
+    android:gravity="center_vertical"
+    android:minHeight="?attr/listPreferredItemHeightSmall"
+    android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
+    android:paddingTop="16dp"
+    android:paddingRight="?android:attr/listPreferredItemPaddingRight"
+    android:paddingBottom="16dp"
+    tools:ignore="RtlHardcoded">
 
     <TextView
         android:id="@android:id/title"
@@ -24,17 +24,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/seekBarPrefValue"
+        android:ellipsize="marquee"
         android:singleLine="true"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:ellipsize="marquee" />
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
         android:id="@+id/seekBarPrefValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@android:id/title"
-        android:layout_toLeftOf="@+id/seekBarPrefUnitsRight"
-        android:layout_marginLeft="16dp" />
+        android:layout_marginLeft="16dp"
+        android:layout_toLeftOf="@+id/seekBarPrefUnitsRight" />
 
     <TextView
         android:id="@+id/seekBarPrefUnitsRight"
@@ -48,11 +48,11 @@
         android:id="@+id/seekBarPrefBarContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@id/seekBarPrefValue"
-        android:layout_marginTop="8dp"
         android:layout_marginLeft="-4dp"
-        android:layout_marginRight="-4dp">
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="-4dp"
+        android:orientation="horizontal">
 
         <SeekBar
             android:id="@+id/seekBarPrefSeekBar"
@@ -60,8 +60,9 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <!-- When we stop supporting API<21, swap this in:
-         android:textAppearance="?android:attr/textAppearanceListItemSecondary" -->
+    <!-- TODO When we stop supporting API<21, swap this in:
+         android:textAppearance="?android:attr/textAppearanceListItemSecondary"
+         -->
     <TextView
         android:id="@android:id/summary"
         android:layout_width="wrap_content"
@@ -70,8 +71,8 @@
         android:layout_alignLeft="@android:id/title"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="6dp"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="?android:attr/textColorSecondary"
+        android:ellipsize="end"
         android:maxLines="10"
-        android:ellipsize="end" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="?android:attr/textColorSecondary" />
 </RelativeLayout>
